# timvw-hello-rs

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  sample.event
.github/workflows/: backup.txt  build_assets_and_add_to_release.yml  draft_release.yml  publish_artifacts.yml  published_release.yml  release.yml  release_on_tag.yml  test.yml
Formula/: hellors-bin.rb
pkg/brew/: hello-rs-bin.rb  hellors-bin.rb
src/: main.rs
